stepper mobile design fix & footer mobile alignment

--- a/src/app/components/footer/footer.component.scss
+++ b/src/app/components/footer/footer.component.scss
@@ -7,7 +7,7 @@ nz-footer {
 
 .footer-menu-title {
     padding: 5px 0;
-    font-size: 20px;
+    font-size: $heading-text;
     height: 40px;
 }
 
